up and down arrows on ReadMessageWindows now scroll the ScrollPane.  

fixed the handling of incorrectly-formed multipart/alternative messages so 
that we display the content.

changed the default UserProfile handling so that if a message doesn't have 
a default UserProfile set, we use the default instead of returning null.

put in another check to try to avoid sending multiple copies of one message.

modified the resizing code for message tables so that we now just resize
the next column.

changed the display for some error message so that there's acutally a 
space between the message and the error code.

fixed a bug in which some message contents wouldn't should up in raw mode.

modified Attachment handing some so that we should now handle misconfigured
emails a little bit better.

no longer have to restart for change in IMAP synch with subscribed folders
setting.

added support for IMAP shared folders. -- tentative on javamail fix.

fixed the StoreInfo so that we now properly use the custom port for
IMAP/SSL.

fixed the FullMailcapCommandMap so that we support custom DataContentHandlers
now.

fixed a bug in the Attachment handling where an incorrectly-formed encoding
would lead to a NullPointerException.

modified the loading of table display infos so that we now don't fail 
totally if a particular field gets an exception.

added a search/filter for arbitrary message headers.

if a folder becomes disconnected, we now pre-emptively check the store to
see if it's connected.

030613 release
--------------
fixed a bug where reopening a pop folder could result in a StackOverflowError.

fixed a bug in the new acount configuration (and AddressBookManager) that 
resulted in being unable to send mail or edit the AddressBook on the first 
startup.

fixed some more cache synchronization bugs in disconnected mode.

backend filters are now run on all new messages, not just messages that
are added while connected.

030530 release
--------------
