@@ -262,6 +262,24 @@ FolderTable.DefaultDateFormat=MM/dd/yy HH:mm
 button.ok=Ok
 button.cancel=Cancel
 
+info.sendMessage.popFromProfile=Populating message from profile...
+info.sendMessage.settingHeaders=Setting headers...
+info.sendMessage.attachingKeys=Attaching crypto keys (if any)...
+info.sendMessage.addingMessageText=Parsing message text...
+info.sendMessage.changingThreads=Sending to message thread...
+info.sendMessage.addingAttachment.1=Adding attachment 
+info.sendMessage.addingAttachment.2= of 
+info.sendMessage.savingChangesToMessage=Saving changes to message...
+info.sendMessage.encryptMessage=Handing encryption...
+info.sendMessage.sendingMessage=Sending message to mailserver...
+
+info.smtpServer.connecting=Connecting to SMTP server...
+info.smtpServer.outbox.connecting=SMTP server not available; getting outbox.
+info.smtpServer.outbox.waitForLock=SMTP server not available; waiting for outbox lock.
+info.smtpServer.outbox.opening=SMTP server not available; opening outbox.
+info.smtpServer.outbox.appending=SMTP server not available; appending to outbox.
+info.smtpServer.sending=Sending message to server.
+
 error.incorrectJavaVersion=Error running Pooka.  This version (1.1 beta) \nof Pooka requires a 1.4 JDK.  \nFor JDK 1.2 or 1.3, please use a release of Pooka 1.0.  \n\nPooka can be downloaded from\nhttp://pooka.sourceforge.net/\n\nYour JDK version:  
 error.FileNotFound=File Not Found
 error.SaveFile=Error saving file
